# dream-forge

./: .env.example  .gitignore  .ruff.toml  CONTRIBUTING.md  DEV.md  Makefile  alembic.ini  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20250913_0001_baseline.py
compose/: docker-compose.fake.yml  docker-compose.yml
db/: dev.sqlite3
docker/: Dockerfile.api  Dockerfile.worker
docs/adr/: 2025-09-m5b-upscalers.md
docs/adrs/: 000-template.md
docs/assets/: flux_prefetch.json  prefetch.example.json  prefetch.upscalers.json
docs/future/: README.md  m3-followups.md  m5-deferred-and-followups.md
docs/masters/: 01-introduction-vision-goals.md  README.md  (+10 more)
modules/: __init__.py
scripts/: e2e_m1.py  export_openapi.py  gpu_cdi_generate.sh  gpu_cleanup.py  inspect_env.sh  run_live_generate2_upscale.py  status.sh  validate_m4.py  validate_m5.py  validate_m5_live.py  validate_m5b_live.py
services/: __init__.py
tests/: test_api_health.py  test_cli_assets_prefetch.py  test_dsn_normalization.py  test_m1_jobs.py  test_m2_artifacts.py  test_m2_logs.py  test_m2_progress.py  test_m3_cli_models.py  test_m3_cli_verify.py  test_m3_downloader_core.py  test_m3_models_api.py  test_m3_worker_model_selection.py  test_m4_batch_artifacts_and_keys.py  test_m4_count_validation.py  test_m4_logs_per_item.py  test_m4_progress_and_sse.py  test_m4_seed_randomized_for_batches.py  test_m5_chain_upscale_minimal.py  test_m5b_api_upscale_impl.py  test_openapi_export.py  test_worker_health.py
tools/: __init__.py
(+54 files in other folders)
