[project]
name = "dream-forge"
version = "0.0.0"
description = "Dream Forge — API-first media generation service (bootstrap)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
authors = [
  { name = "Dream Forge Team" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "celery>=5.4",
  "redis>=5.0",
  "boto3>=1.34",
  "prometheus-client>=0.20",
  "pydantic>=2.7",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "pillow>=10.4",
]



[tool.ruff]
target-version = "py312"
line-length = 100
select = [
  "E", "F", "W", # pycodestyle/pyflakes/warnings
  "I",              # isort
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["services", "modules", "tools"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
explicit_package_bases = true
namespace_packages = true
plugins = []
exclude = [
  "alembic/versions/",
]
